fix: 다운로드 동기화 관련 오류 수정